# task-world

./: .env.example  .gitignore  .mcp.json  .plan  .pre-commit-config.yaml  .secrets.baseline  .worktree-setup  AGENTS.lite.md  AGENTS.md  BUILD_SUMMARY.md  CLAUDE.md  CLAUDE_SDK_MCP_INVESTIGATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  config.json  dev.sh  git-wrapper.sh  model_costs.yaml  orchestrator.db-journal  orchestrator.db.bak  pyproject.toml  test_commit.txt  test_phases_implementation.py  tmpptoa00uv.py  try_git.py
.claude/: settings.json
.task-world/: config.yaml
conversations/6daf2c6c92084f1abedc7fc1a301f7ec/: base_state.json  meta.json
docker/: Dockerfile.agent-server
docs/: ARCHITECTURE.md  CODEX_JSONRPC_HANDSHAKE_REFERENCE.md  CODEX_MCP_FINDINGS_SUMMARY.md  CODEX_MCP_INDEX.md  CODEX_SERVER_MCP_INVESTIGATION.md  PARTIAL-FEATURES.md  caching-work.md  clarification-flow-northstar.md  context-targeting-presentation.html  db-recovery-remaining-work.md  executor-death-loop-investigation.md  performance-analysis.md  rate-limit-handling.md  recovery-runbook.md  refactor-modules.md  routine-files-environment-gap.md  run-analysis-2e47c1ff.md  run-trace-investigation.md  step-context-guide.md  token-usage-analysis-run-b14aa49f.md
docs/UI-QA/: architecture.md  clarifications.md  code-map.md  codebase-discovery.md  dry-run-notes.md  intent.md  plan-summary.md  plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  step-06-plan.md  verification-report.md
docs/agent-runners2/: architecture.md  clarifications.md  dry-run-notes.md  intent.md  plan-summary.md  plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  step-06-plan.md  step-07-plan.md  step-08-plan.md  verification-report.md
docs/architecture-site/: index.html
docs/better-state/: fixes.md  issues.md  report.html
docs/better-tests/: coverage-threshold-impact.html  priority-1-impact.html  test-strategy-impact.html  test-strategy-impact.md  test-strategy-improvements.md
docs/bug-removal/: architecture.md  clarifications.md  dry-run-notes.md  intent.md  plan-summary.md  plan.md  routine-yaml-format.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  step-06-plan.md  step-07-plan.md  step-08-plan.md  step-09-plan.md  step-10-plan.md  step-11-plan.md  step-12-plan.md  verification-report.md
docs/bugs/: AGENT-DEATH-HUMAN-GATE.md  FAILED-RUN-RECOVERY.md  MCP-TOOLS-NO-PHASE-FILTERING.md  UI-AGENT-GUIDANCE-PANEL.md  UI-BACKWARD-TRANSITIONS.md  UI-BRANCH-STATUS.md  UI-ENV-FILE-MANAGEMENT.md  UI-GLOBAL-CONFIG.md  UI-ROUTINE-VALIDATION.md  UI-STEP-APPROVAL.md
docs/codex-server/: architecture.md  clarifications.md  dry-run-notes.md  execution-summary.md  intent.md  plan-summary.md  plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  step-06-plan.md  verification-report.md
docs/codex-server-transport/: api-contract.md  release-readiness.md
docs/conditional-steps/: architecture.md  clarifications.md  dry-run-notes.md  idea.md  intent.md  plan-summary.md  plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  step-06-plan.md  verification-report.md
docs/distributed-work-queue/: db-backed-coordination.md  dry-run-notes.md  temporal-alignment.md
docs/dynamic-graph/: remaining-fr-validation-plan.html  status.md  typed-work-graph-requirements.md
docs/enhanced-clarifications/: CONFLICTS.md  architecture.md  design-questions.md  dry-run-notes.md  final-plan-summary.md  intent.md  plan-summary.md  plan.md  routine-yaml-format.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  verification-report.md
docs/event-log-durability/: architecture.md  code-map.md  codebase-discovery.md  dry-run-notes.md  intent.md  plan-summary.md  plan.md  slice-01-evidence.md  step-01-plan.md  verification-report.md
docs/event-source/: architecture.md  clarifications.md  dry-run-notes.md  intent.md  plan-summary.md  plan.md  repair-progress.md  step-00-plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  verification-report.md
docs/experiments/: claude-sandbox-investigation.md  fast-iteration-guide.md  run-cb4691a0-token-analysis.html  synthesis-report-v1-superseded.html  synthesis-report.html
docs/frontend-gaps/: CONFLICTS.md  approval-record.md  architecture.md  design-questions.md  dry-run-notes.md  evaluation-run-168b96fb.md  intent.md  plan-summary.md  plan.md  routine-yaml-format.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  step-06-plan.md  step-07-plan.md  step-08-plan.md  verification-report.md
docs/gap-analyzer/: architecture.md  clarifications.md  dry-run-notes.md  idea.md  intent.md  plan-summary.md  plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  verification-report.md
docs/git-ops/: architecture.md  clarifications.md  dry-run-notes.md  intent.md  plan-summary.md  plan.md  step-01-plan.md  step-02-plan.md  step-03-plan.md  step-04-plan.md  step-05-plan.md  (+8 more)
orchestrator/: __init__.py
routines/: demo-task.yaml  e2e-codex-flow.yaml  example-backward-transitions.yaml  fullstack-feature.yaml  idea-to-plan.yaml
scripts/: check_delegation_boundaries.py  check_module_imports.py  check_signal_routing.py  check_test_count.sh  clone_run_from_s2.py  compare_carriers.py  cost_report.py  dev_isolated.sh  evaluate_phase1_oversight.py  export_enums.py  monitor_and_answer.py  profile_graph_readback.py  restore_from_journal.py  run_child_evidence.py  run_evidence_standardization.py  run_phase1_planning_experiment.py  run_phase2_oversight_loop.py  run_phase3_meta_review.py  run_phase4_evidence_standardization.py  seed_db.py  serve.py  worker.py
src/: __init__.py
tests/: conftest.py  test_check_test_count.py
ui/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+1925 files in other folders)
