[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator - LLM Agent Workflow Management"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.25",
    "websockets>=12.0",
    "gitpython>=3.1",
    "click>=8.1",
    "aiofiles>=23.0",
    "greenlet>=3.3.1",
    "alembic>=1.18.3",
    "mcp>=1.26.0",
    "openhands-workspace>=1.10.0",
]

[project.optional-dependencies]
openhands = ["openhands-ai>=1.2,<2.0"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pyright>=1.1",
    "ruff>=0.1",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
