[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator - LLM Agent Workflow Management"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "httpx>=0.25",
    "websockets>=12.0",
    "gitpython>=3.1",
    "click>=8.1",
    "aiofiles>=23.0",
    "greenlet>=3.3.1",
    "alembic>=1.18.3",
    "mcp>=1.26.0",
    "openhands-workspace>=1.11.0",
    "pyjwt>=2.11.0",
    "openhands-tools>=1.10.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.48",
]

[project.optional-dependencies]
openhands = ["openhands-ai>=1.3.0,<2.0"]

[project.scripts]
orchestrator = "orchestrator.cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pyright>=1.1",
    "ruff>=0.1",
    "pre-commit>=4.5.1",
    "detect-secrets>=1.5.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-n auto --dist worksteal --timeout=30"
timeout = 30
markers = [
    "slow: tests that invoke real external tools (LLMs, Docker, CLI agents)",
    "e2e: end-to-end tests that run against a real HTTP server",
]
filterwarnings = [
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
    "ignore:websockets\\.legacy:DeprecationWarning",
    "ignore:websockets\\.server\\.WebSocketServerProtocol:DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
include = ["src"]
exclude = [
    ".venv",
    "**/__pycache__",
    "docs",
    "repos",
    "worktrees",
    "scripts",
    "tests",
    "ui",
]
